--- a/demo.html
+++ b/demo.html
@@ -1,3 +1,25 @@
-<h2>the amazon cloud project</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>github </title>
+    <link rel="stylesheet" href="/amazoncloud/style.css">
+</head>
+<body>
+    <h2>the amazon cloud project</h2>
 <br>
 <p>where in this we can see the changes of the githb to local </p>
+<h3>
+    the git hub process
+</h3>
+<pre class="preclass">
+   <il>  the github repo</il>
+  <il>  clone</il>
+   <il> make changes or any modifications in the code</il>
+   <il> add ,commit and push</il>
+
+</pre>
+</body>
+</html>
