--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,7 @@
   <il>  clone</il>
    <il> make changes or any modifications in the code</il>
    <il> add ,commit and push</il>
+   <h3>i learn the undo changes</h3>
 
 </pre>
 </body>
