--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,7 @@
    <il> make changes or any modifications in the code</il>
    <il> add ,commit and push</il>
    <h3>i learn the undo changes</h3>
+   <li>undo changes</li>
 
 </pre>
 </body>
